--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -13,6 +13,7 @@
             integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
             crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <link href="{% static 'main/style.css' %}" type="text/css" rel="stylesheet">
 </head>
 <body>
 <nav class="py-2 bg-light border-bottom">
