--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -8,25 +8,27 @@
         <h6 class="pb-2 mb-0">Новые темы</h6>
         {% for th in th %}
             <div class="d-flex text-muted pt-3">
-                <div class="bd-placeholder-img flex-shrink-0 me-2 rounded" width="50" height="50">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
-                         class="bi bi-code-slash" viewBox="0 0 16 16">
-                        <path d="{{ th.forum.icon.svg }}"></path>
-                    </svg>
+                <div class="bd-placeholder-img flex-shrink-0 me-2 rounded">
+                    <i style="font-size: 30px;" class="{{ th.forum.icon.svg }}"></i>
                 </div>
 
-                <a style="text-decoration: none; color: #6c757d!important;" href="threads/{{ th.pk }}/" class="pb-3 mb-0 small lh-sm border-bottom">
-                    <strong class="d-block text-gray-dark"><span class="badge bg-{{ th.prefix.color }}">{{ th.prefix.name }}</span> {{ th.title }}</strong>
-                    {{ th.forum.name }} | @demon | {{ th.date }}
-                </a>
+                <div href="threads/{{ th.pk }}/"
+                   class="pb-3 mb-0 small lh-sm border-bottom">
+                    <strong class="d-block text-gray-dark"><span
+                            class="badge bg-{{ th.prefix.color }}">{{ th.prefix.name }}</span> <a href="/threads/{{ th.pk }}" style="text-decoration: none; color: #6c757d!important;">{{ th.title }}</a>
+                        <div class="spinner-grow" role="status" style="width: 1rem; height: 1rem;">
+                        </div>
+                    </strong>
+                    <a style="text-decoration: none; color: #6c757d!important;" href="/forums/{{ th.forum.pk }}">{{ th.forum.name }}</a> | @demon | {{ th.date }}
+                </div>
             </div>
-            {% endfor %}
-            </div>
+        {% endfor %}
+    </div>
 {% endblock %}
 
 {% block left %}
     <div class="my-3 p-3 bg-body shadow-sm">
-        <h6 class="card-title">Пользователи онлайн:</h6>
+        <h6 class="card-title">Новые пользователи:</h6>
         <div class="d-flex text-muted pt-3">
             <svg class="bd-placeholder-img flex-shrink-0 me-2 rounded" width="32" height="32"
                  xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 32x32"
