--- a/main/templates/main/byfr.html
+++ b/main/templates/main/byfr.html
@@ -23,12 +23,13 @@
                 <div href="threads/{{ th.pk }}/"
                      class="pb-3 mb-0 small lh-sm border-bottom">
                     <strong class="d-block text-gray-dark"><span
-                            class="badge bg-{{ th.prefix.color }}"><i class="{{ th.prefix.icon.svg }}"></i>{{ th.prefix.name }}</span> <a
+                            class="badge bg-{{ th.prefix.color }}"><i
+                            class="{{ th.prefix.icon.svg }}"></i>{{ th.prefix.name }}</span> <a
                             href="/threads/{{ th.pk }}"
                             style="text-decoration: none; color: #6c757d!important;">{{ th.title }}</a>
                     </strong>
                     <a style="text-decoration: none; color: #6c757d!important;"
-                       href="/forums/{{ th.forum.pk }}">{{ th.forum.name }}</a> | @demon | {{ th.date }}
+                       href="/forums/{{ th.forum.pk }}">{{ th.forum.name }}</a> | @{{ th.user }} | {{ th.date }}
                 </div>
             </div>
         {% endfor %}
@@ -36,5 +37,7 @@
 </div>
 {% endblock %}
 {% block left %}
-    <a href="create" type="button" class="btn btn-outline-secondary"><i class="bi bi-pen"></i> Новая тема</a>
+    {% if user.is_authenticated %}
+        <a href="create" type="button" class="btn btn-outline-secondary"><i class="bi bi-pen"></i> Новая тема</a>
+    {% endif %}
 {% endblock %}
