--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link href="{% static 'main/style.css' %}" type="text/css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 </head>
 <body>
 <nav class="py-2 bg-light border-bottom">
@@ -27,10 +28,19 @@
             <li class="nav-item"><a href="#" class="nav-link link-dark px-2">Пользователи</a></li>
             <li class="nav-item"><a href="#" class="nav-link link-dark px-2">FAQ</a></li>
         </ul>
-        <ul class="nav">
-            <li class="nav-item"><a href="#" class="nav-link link-dark px-2 btn btn-outline-secondary">Войти</a></li>
-            <li class="nav-item"><a href="#" class="nav-link link-dark px-2">Создать аккаунт</a></li>
-        </ul>
+        {% if user.is_authenticated %}
+            <ul class="nav">
+                <li class="nav-item"><a href="#" class="nav-link link-dark px-2">Мой профиль
+                    | {{ user.get_username }}</a></li>
+            </ul>
+        {% else %}
+            <ul class="nav">
+                <li class="nav-item"><a href="{% url 'login' %}?next={{ request.path }}"
+                                        class="nav-link link-dark px-2 btn btn-outline-secondary">Войти</a>
+                </li>
+                <li class="nav-item"><a href="#" class="nav-link link-dark px-2">Создать аккаунт</a></li>
+            </ul>
+        {% endif %}
     </div>
 </nav>
 <header class="p-3 mb-3">
