--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -13,13 +13,14 @@
                 </div>
 
                 <div href="threads/{{ th.pk }}/"
-                   class="pb-3 mb-0 small lh-sm border-bottom">
+                     class="pb-3 mb-0 small lh-sm border-bottom">
                     <strong class="d-block text-gray-dark"><span
-                            class="badge bg-{{ th.prefix.color }}"><i class="{{ th.prefix.icon.svg }}"></i> {{ th.prefix.name }}</span> <a href="/threads/{{ th.pk }}" style="text-decoration: none; color: #6c757d!important;">{{ th.title }}</a>
-                        <div class="spinner-grow" role="status" style="width: 1rem; height: 1rem;">
-                        </div>
+                            class="badge bg-{{ th.prefix.color }}">{{ th.prefix.name }}</span> <a
+                            href="/threads/{{ th.pk }}"
+                            style="text-decoration: none; color: #6c757d!important;">{{ th.title }}</a>
                     </strong>
-                    <a style="text-decoration: none; color: #6c757d!important;" href="/forums/{{ th.forum.pk }}">{{ th.forum.name }}</a> | @demon | {{ th.date }}
+                    <a style="text-decoration: none; color: #6c757d!important;"
+                       href="/forums/{{ th.forum.pk }}">{{ th.forum.name }}</a> | @{{ th.user }} | {{ th.date }}
                 </div>
             </div>
         {% endfor %}
