--- a/main/templates/main/byfr.html
+++ b/main/templates/main/byfr.html
@@ -23,13 +23,12 @@
                 <div href="threads/{{ th.pk }}/"
                      class="pb-3 mb-0 small lh-sm border-bottom">
                     <strong class="d-block text-gray-dark"><span
-                            class="badge bg-{{ th.prefix.color }}"><i
-                            class="{{ th.prefix.icon.svg }}"></i>{{ th.prefix.name }}</span> <a
+                            class="badge bg-{{ th.prefix.color }}">{{ th.prefix.name }}</span> <a
                             href="/threads/{{ th.pk }}"
                             style="text-decoration: none; color: #6c757d!important;">{{ th.title }}</a>
                     </strong>
                     <a style="text-decoration: none; color: #6c757d!important;"
-                       href="/forums/{{ th.forum.pk }}">{{ th.forum.name }}</a> | @{{ th.user }} | {{ th.date }}
+                       href="/forums/{{ th.forum.pk }}">{{ th.forum.name }}</a> | <a href="/user/{{ th.user }}" class="no-dekor" style="color: {{ th.user.color }}">{{ th.user }}</a> | {{ th.date }}
                 </div>
             </div>
         {% endfor %}
