--- a/main/static/main/style.css
+++ b/main/static/main/style.css
@@ -499,3 +499,34 @@ https://www.html5rocks.com/en/tutorials/speed/high-performance-animations/
 }
 
 /* Page Styles */
+.stats {
+    background: #f2f5f8 !important;
+    color: #000 !important
+}
+
+.articles {
+    font-size: 10px;
+    color: #a1aab9
+}
+
+.number1 {
+    font-weight: 500
+}
+
+.followers {
+    font-size: 10px;
+    color: #a1aab9
+}
+
+.number2 {
+    font-weight: 500;
+}
+
+.rating {
+    font-size: 10px;
+    color: #a1aab9
+}
+
+.number3 {
+    font-weight: 500
+}
