--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -16,6 +16,9 @@
     <link href="{% static 'main/style.css' %}" type="text/css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <style>
+
+    </style>
 </head>
 <body>
 <nav class="py-2 bg-light border-bottom">
@@ -30,7 +33,7 @@
         </ul>
         {% if user.is_authenticated %}
             <ul class="nav">
-                <li class="nav-item"><a href="#" class="nav-link link-dark px-2">Мой профиль
+                <li class="nav-item"><a href="/user/{{ user.get_username }}/" class="nav-link link-dark px-2">Мой профиль
                     | {{ user.get_username }}</a></li>
             </ul>
         {% else %}
@@ -38,7 +41,7 @@
                 <li class="nav-item"><a href="{% url 'login' %}?next={{ request.path }}"
                                         class="nav-link link-dark px-2 btn btn-outline-secondary">Войти</a>
                 </li>
-                <li class="nav-item"><a href="#" class="nav-link link-dark px-2">Создать аккаунт</a></li>
+                <li class="nav-item"><a href="/accounts/register" class="nav-link link-dark px-2">Создать аккаунт</a></li>
             </ul>
         {% endif %}
     </div>
