--- a/main/templates/main/threads.html
+++ b/main/templates/main/threads.html
@@ -6,7 +6,6 @@
         {{ th.title }}
     {% endfor %}
 {% endblock %}
-
 {% block main %}
     {% for th in th %}
         <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
@@ -25,7 +24,8 @@
             <div class="row" id="{{ po.pk }}">
                 <div class="my-3 p-3 bg-body rounded shadow-sm">
                     <div class="g-mb-15">
-                        <a class="h5 g-color-gray-dark-v1 mb-0 no-dekor text-dark">{{ po.user }}</a>
+                        <a href="/user/{{ po.user.user }}" class="h5 g-color-gray-dark-v1 mb-0 no-dekor"
+                           style="color: {{ po.user.color }}">{{ po.user }}</a>
                         <br>
                         <span class="g-color-gray-dark-v4 g-font-size-12">{{ po.date }}</span> <a
                             title="Пожаловаться на пост {{ po.pk }}" href="/war/{{ po.pk }}"
@@ -58,7 +58,7 @@
                 {% csrf_token %}
 
                 <div class="input-group mb-3">
-                <textarea name="content" type="text" class="form-control" placeholder="Ваши мысли..."
+                <textarea required name="content" type="text" class="form-control" placeholder="Ваши мысли..."
                           aria-label="Username"
                           aria-describedby="basic-addon1"></textarea>
                     <button type="submit" class="btn btn-outline-secondary">Отправить</button>
